[gd_scene load_steps=6 format=2]

[ext_resource path="res://onepixel.png" type="Texture" id=1]
[ext_resource path="res://palette.gd" type="Script" id=2]
[ext_resource path="res://indicator.png" type="Texture" id=3]
[ext_resource path="res://ColorArea.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25.3831, 25.2158 )

[node name="Palette" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color0Area" type="Area2D" parent="."]
position = Vector2( 30, 30 )
script = ExtResource( 4 )

[node name="Color" type="Sprite" parent="Color0Area"]
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Color0Area"]
shape = SubResource( 1 )

[node name="Color1Area" type="Area2D" parent="."]
position = Vector2( 85, 30 )
script = ExtResource( 4 )

[node name="Color" type="Sprite" parent="Color1Area"]
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Color1Area"]
shape = SubResource( 1 )

[node name="Color2Area" type="Area2D" parent="."]
position = Vector2( 140, 30 )
script = ExtResource( 4 )

[node name="Color" type="Sprite" parent="Color2Area"]
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Color2Area"]
shape = SubResource( 1 )

[node name="Color3Area" type="Area2D" parent="."]
position = Vector2( 195, 30 )
script = ExtResource( 4 )

[node name="Color" type="Sprite" parent="Color3Area"]
scale = Vector2( 50, 50 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Color3Area"]
shape = SubResource( 1 )

[node name="SelectionIndicator" type="Sprite" parent="."]
position = Vector2( 30, 60 )
texture = ExtResource( 3 )
